--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
-	"editor.fontFamily": "'Monaco', 'Courier New', monospace",
-	"editor.fontSize": 13,
-	"editor.renderWhitespace": "boundary"
+	"editor.fontFamily": "'Consolas'",
+	"editor.fontSize": 14,
+	"editor.renderWhitespace": "boundary",
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
+	"editor.formatOnSave": true
 }
